recursion.cons.lessons.recursion.cons.Increasing.scala.error
increasing:4: error: value head is not a member of Int
  } else if (l.head<(l.head).head) {
                             ^